Added page for redirect to client download

--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,5 @@
 {
   "ServerPort": 5000,
-  "MongoURI": "mongodb://localhost/conferencedb"
+  "MongoURI": "mongodb://localhost/conferencedb",
+  "ClientAppOnly": true
 }
