--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A video conferencing software designed for business to install locally on their servers, bypassing centralized services like Zoom. ",
   "main": "app.js",
-  "bin" : "app.js",
+  "bin": "app.js",
   "scripts": {
     "start": "node app",
     "dev": "nodemon app"
@@ -29,6 +29,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "peer": "^0.5.3",
+    "public-ip": "^4.0.2",
     "socket.io": "^2.3.0",
     "uuid": "^8.3.0"
   },
